# url_parser

./: Cargo.toml  Makefile  Readme.md  urls.txt
src/: lib.rs  main.rs  url_grammar.pest
tests/: url_domain_name_parser_unit_tests.rs  url_grammar_unit_tests.rs  url_parameters_parsing_tests.rs  url_parser_unit_tests.rs  url_parsing_tests_using_anyhow.rs  url_paths_parsing_tests.rs  url_port_name_parser_unit_tests.rs  url_port_value_parser_unit_tests.rs  url_scheme_parser_unit_tests.rs
