[package]
name = "ukma_url_parser"
version = "0.1.0"
edition = "2021"
description = "This Rust project provides functionality for parsing URLs and their components (such as protocol, domains, parameters, etc.) using the rust-pest library. It is designed for analyzing parts of a URL."

[dependencies]
peg = "0.8.4"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
